# task_assignment_robot_control_v1.0.6

./: .gitignore  README.md
.github/workflows/: build-docker.yml  ci.yml  test_controllers.yml  test_demos.yml  test_robot_state.yml
task_assignment/: CMakeLists.txt  Dockerfile  Meeran_instructions.txt  README.md  basic_visualize  log.txt  log_ext_force.txt  log_home.txt  log_trajectory.txt  requirements.txt  robot_controller_assignment
task_assignment/include/local/: controller.hpp  convenience_helpers.hpp  demo.hpp  simulation.hpp
task_assignment/include/pinocchio_v2.6.12/pinocchio/: fwd.hpp
task_assignment/lib/: libpinocchio.so.2.6.12
task_assignment/share/robot_model/urdf/: ur5_robot.urdf
task_assignment/src/: .visualize3d.py.swp  CMakeLists.txt  basic_visualize.py  demo.cpp  main.cpp  simulation.cpp  visualize3d.py
task_assignment/tests/: CMakeLists.txt  test_controllers.cpp  test_demos.cpp  test_robot  test_robot.cpp  test_robot_state.cpp
